--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
-    "start": "webpack-dev-server --open --config build/webpack.config.dev.js",
+    "dev": "webpack-dev-server --open --progress --config build/webpack.config.dev.js",
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue build src",
     "test": "jest"
