--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack-dev-server --open --progress --config build/webpack.config.dev.js",
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue build src",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "vue": "^2.5.16",
