--- a/package.json
+++ b/package.json
@@ -6,61 +6,62 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --open --progress --config build/webpack.config.dev.js",
-    "build": "webpack --config build/webpack.config.prod.js",
+    "dev": "webpack-dev-server --config build/webpack.dev.config.js",
+    "build": "webpack --config build/webpack.prod.config.js",
     "lint": "eslint --ext .js,.vue build src",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@vue/test-utils": "^1.0.0-beta.13",
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
+    "autoprefixer": "^9.4.3",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.1.0",
+    "cssnano-preset-advanced": "^4.0.6",
+    "eslint": "^5.11.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0",
     "extract-text-webpack-plugin": "next",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "jest-serializer-vue": "^1.0.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "postcss-custom-media": "^6.0.0",
-    "postcss-custom-selectors": "^4.0.1",
-    "postcss-font-family-system-ui": "^3.0.0",
-    "postcss-loader": "^2.1.3",
-    "postcss-nesting": "^4.2.1",
-    "postcss-normalize": "^4.0.0",
-    "postcss-preset-env": "^4.0.0",
+    "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-custom-media": "^7.0.7",
+    "postcss-custom-selectors": "^5.1.2",
+    "postcss-font-family-system-ui": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nesting": "^7.0.0",
+    "postcss-normalize": "^7.0.1",
+    "postcss-preset-env": "^6.5.0",
     "postcss-pxtorem": "^4.0.1",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
-    "vue-jest": "^2.4.1",
+    "vue-jest": "^3.0.2",
     "vue-loader": "^14.2.2",
-    "vue-template-compiler": "^2.5.16",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 11"
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
   ],
   "jest": {
     "collectCoverage": false,
