--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@babel/preset-env": "^7.2.3",
     "@vue/test-utils": "^1.0.0-beta.13",
     "autoprefixer": "^9.4.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "cssnano-preset-advanced": "^4.0.6",
