--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
-    "extract-text-webpack-plugin": "next",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
+    "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-custom-media": "^7.0.7",
     "postcss-custom-selectors": "^5.1.2",
