--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --config build/webpack.dev.config.js",
     "build": "webpack --config build/webpack.prod.config.js",
+    "dev": "webpack-dev-server --config build/webpack.dev.config.js",
+    "format": "yarn prettier && yarn lint",
     "lint": "eslint --ext .js,.vue build src",
+    "prettier": "prettier --write '**/*.{js,json}'",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -36,6 +38,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
     "mini-css-extract-plugin": "^0.5.0",
@@ -48,11 +51,12 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.5.0",
     "postcss-pxtorem": "^4.0.1",
+    "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.0.1",
     "vue-jest": "^3.0.2",
-    "vue-loader": "^14.2.2",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.2",
@@ -65,6 +69,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format"
+    }
+  },
   "jest": {
     "collectCoverage": false,
     "collectCoverageFrom": [
