--- a/package.json
+++ b/package.json
@@ -14,6 +14,17 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "lint-staged": {
+    "**/*.{js,json,vue}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "vue": "^2.5.21"
   },
@@ -41,6 +52,7 @@
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
+    "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-custom-media": "^7.0.7",
@@ -69,11 +81,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format"
-    }
-  },
   "jest": {
     "collectCoverage": false,
     "collectCoverageFrom": [
