--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cssnano-preset-advanced": "^4.0.6",
     "eslint": "^5.11.1",
     "eslint-config-standard": "^12.0.0",
+    "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^8.0.0",
