configure eslint in development mode and add git hooks

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Charles X. Morrissey",
-  "license": "MIT",
   "private": true,
   "scripts": {
     "build": "webpack --config build/webpack.prod.config.js",
@@ -15,7 +14,7 @@
     "test:watch": "jest --watch"
   },
   "lint-staged": {
-    "**/*.{js,json,vue}": [
+    "**/*.{js,json}": [
       "prettier --write",
       "git add"
     ]
@@ -41,11 +40,13 @@
     "css-loader": "^2.1.0",
     "cssnano-preset-advanced": "^4.0.6",
     "eslint": "^5.11.1",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
