--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "dev": "webpack-dev-server --config build/webpack.dev.config.js",
     "format": "yarn prettier && yarn lint",
     "lint": "eslint --ext .js,.vue build src",
+    "lint-autofix": "eslint --ext .js,.vue build src --fix",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "prettier": "prettier --write '**/*.{js,json}'",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "lint-staged": {
+
     "**/*.{js,json}": [
       "prettier --write",
       "git add"
@@ -21,7 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn lint-autofix && lint-staged"
     }
   },
   "dependencies": {
@@ -41,14 +44,10 @@
     "cssnano-preset-advanced": "^4.0.6",
     "eslint": "^5.11.1",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-config-standard": "^12.0.0",
     "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
