--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
   "private": true,
   "scripts": {
     "build": "webpack --config build/webpack.prod.config.js",
-    "dev": "webpack-dev-server --config build/webpack.dev.config.js",
-    "format": "prettier --write '**/*.{js,json}'",
-    "lint:autofix": "eslint --ext .js,.vue build src --fix",
+    "start": "webpack-dev-server --config build/webpack.dev.config.js",
+    "format": "prettier --write '**/*.js'",
+    "lint:fix": "eslint --ext .js,.vue build src --fix",
     "lint": "eslint --ext .js,.vue build src",
     "test:watch": "jest --watch",
     "test": "jest",
     "validate": "yarn format && yarn lint"
   },
   "lint-staged": {
-    "**/*.{js,json}": [
-      "prettier --write",
-      "git add"
-    ],
     "**/*.{js,vue}": [
-      "eslint --ext .js,.vue build src --fix",
+      "yarn format",
+      "yarn lint",
       "git add"
     ]
   },
