--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "webpack --config build/webpack.prod.config.js",
     "start": "webpack-dev-server --config build/webpack.dev.config.js",
-    "format": "prettier --write '**/*.js'",
+    "format": "prettier --write '**/*.{js,vue}'",
     "lint:fix": "eslint --ext .js,.vue build src --fix",
     "lint": "eslint --ext .js,.vue build src",
     "test:watch": "jest --watch",
@@ -44,9 +44,11 @@
     "css-loader": "^2.1.0",
     "cssnano-preset-advanced": "^4.0.6",
     "eslint": "^5.11.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
