--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^1.0.1",
     "vue-jest": "^3.0.2",
     "vue-loader": "^15.4.2",
