--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "author": "Charles X. Morrissey",
   "private": true,
+  "browserslist": [
+    "> 0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "scripts": {
     "build": "webpack --config build/webpack.prod.config.js",
-    "start": "webpack-dev-server --config build/webpack.dev.config.js",
     "format": "prettier --write '**/*.{js,vue}'",
-    "lint:fix": "eslint --ext .js,.vue build src --fix",
     "lint": "eslint --ext .js,.vue build src",
-    "test:watch": "jest --watch",
+    "lint:fix": "eslint --ext .js,.vue build src --fix",
+    "start": "webpack-dev-server --progress --config build/webpack.dev.config.js",
     "test": "jest",
-    "validate": "yarn format && yarn lint"
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
     "**/*.{js,vue}": [
@@ -41,14 +46,19 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^3.4.2",
     "cssnano-preset-advanced": "^4.0.6",
     "eslint": "^5.11.1",
     "eslint-config-prettier": "^6.1.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
@@ -76,12 +86,6 @@
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
-  "browserslist": [
-    "> 0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "jest": {
     "collectCoverage": false,
     "collectCoverageFrom": [
