--- a/package.json
+++ b/package.json
@@ -46,26 +46,25 @@
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^3.4.2",
-    "cssnano-preset-advanced": "^4.0.6",
-    "eslint": "^5.11.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-formatter-pretty": "^2.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-formatter-pretty": "^4.0.0",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "eslint-webpack-plugin": "^2.4.0",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^10.5.2",
     "mini-css-extract-plugin": "^0.5.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-custom-media": "^7.0.7",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-loader": "^3.0.0",
@@ -83,7 +82,7 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^5.4.0"
   },
   "jest": {
     "collectCoverage": false,
